--- a/projects/conferences/rupy/2009/Makefile
+++ b/projects/conferences/rupy/2009/Makefile
@@ -2,12 +2,12 @@ all: presentation.html handout.html
 
 presentation.html : presentation.txt docutils.conf
 	@echo "checking in $< and making $@"
-	@svn ci -q --force-log  -m. $<
+	#@svn ci -q --force-log  -m. $<
 	@rst2s5.py --strip-comments $< $@
 
 handout.html : presentation.txt docutils.conf
 	@echo "checking in $< and making $@"
-	@svn ci -q --force-log  -m. $<
+	#@svn ci -q --force-log  -m. $<
 	@rst2html.py --strip-comments $< $@
 
 bundle :
