accumulated updates; re-rendered

--- a/docutils.conf
+++ b/docutils.conf
@@ -3,8 +3,7 @@
 source-link: 1
 datestamp: %Y-%m-%d %H:%M UTC
 generator: 1
-#input-encoding: iso-8859-1
-#output-encoding: iso-8859-1
+input-encoding: utf-8-sig
 output-encoding: utf-8
 
 [html4css1 writer]
